@@ -90,6 +90,11 @@ PRADO component tags when you use it to edit PRADO templates.
 <li><a href="mailto:knut.urdalen@gmail.com">Knut Urdalen</a></li>
 </ul>
 
+<h3>Prado v3 Testing Team</h3>
+<ul>
+<li><a href="Christophe.Boulain@ceram.fr">Christophe Boulain</a></li>
+</ul>
+
 <h3>Prado v2 Maintenance Team</h3>
 <ul>
 <li><a href="mailto:rodolfo@equinoxe.g-networks.net">Rodolfo Gonzales</a></li>
@@ -111,7 +116,7 @@ PRADO component tags when you use it to edit PRADO templates.
 <ul>
 <li>Stever for providing an Apple G3 notebook for testing safari browser issues.</li>
 <li>Stanislav Yordanov - the script of generating Dreameweaver extension for PRADO</li>
-<li>Andrés Adolfo Testi - original concept and naming for Active Controls.</li>
+<li>AndrÃ©s Adolfo Testi - original concept and naming for Active Controls.</li>
 <li><a href="http://www.jackslocum.com/">Jack Slocum</a> - inspiration for the quickstart commenting system.</li>
 <li>Cesar Ramos - Active Record driver for IBM DB2.</li>
 <li>All PRADO users - great suggestions, feedback and support</li>
